# lower-aigc

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/core/: deps.py  exceptions.py  security.py
backend/app/models/: __init__.py  custom_prompt.py  document.py  quick_reduce.py  user.py
backend/app/routers/: admin.py  auth.py  document.py  health.py  system.py
backend/app/schemas/: auth.py  common.py  document.py
backend/app/services/: auth_service.py  deepseek_service.py  document_service.py  email_service.py
backend/app/utils/: docx_builder.py  docx_parser.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/public/: site.webmanifest
frontend/src/: App.vue  main.js
frontend/src/api/: admin.js  auth.js  document.js  index.js  prompt.js
frontend/src/components/common/: CopyButton.vue
frontend/src/components/document/: ParagraphCard.vue  ReductionControls.vue
frontend/src/components/layout/: AppFooter.vue  AppHeader.vue
frontend/src/composables/: useCopyToClipboard.js
frontend/src/i18n/: en.js  index.js  zh-CN.js
frontend/src/router/: index.js
frontend/src/stores/: app.js  auth.js  document.js
frontend/src/utils/: logger.js
frontend/src/views/: HomeView.vue  NotFoundView.vue  QuickReduceView.vue
frontend/src/views/admin/: AdminSettingsView.vue
frontend/src/views/auth/: LoginView.vue  RegisterView.vue  ResetPasswordView.vue  VerifyEmailView.vue
(+4 files in other folders)
