[project]
name = "lower-aigc-backend"
version = "1.0.0"
description = "Lower-AIGC backend — AIGC detection rate reduction for academic papers"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-multipart>=0.0.18,<1.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
    "aiosmtplib>=3.0.0,<4.0.0",
    "alembic>=1.14.0,<2.0.0",
    "email-validator>=2.0.0,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
